--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ div.content {
     .sidebar {
         width: 100%;
         height: auto;
-        position: relative;
+        position: fixed;
+        z-index: 2;
     }
     .sidebar a {float: left;}
     div.content {margin-left: 0;}
